--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css" />
+    <script src="./scripts/constants.js" defer></script>
+    <script src="./scripts/script.js" defer></script>
+
   </head>
   <body class="page">
     <!-- header -->
     <header class="header">
       <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
     </header>
-    <main>
+    <main class="main">
       <!-- profile -->
       <section class="profile">
         <div class="profile__wrapper">
@@ -22,81 +25,23 @@
           />
           <div class="profile__info">
             <h1 class="profile__user-name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="Редактировать"
+            ></button>
             <p class="profile__user-occupation">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button" type="button" aria-label="Добавить"></button>
+        <button
+          class="profile__add-button"
+          type="button"
+          aria-label="Добавить"
+        ></button>
       </section>
-      <!-- elements -->
-      <section class="elements">
-        <ul class="elements__items">
-          <li class="elements__item">
-            <img
-              src="./images/karachaevsk.jpg"
-              alt="Карачаевск"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Карачаевск</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/elbrus.jpg"
-              alt="Гора Эльбрус"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Гора Эльбрус</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/dombai.jpg"
-              alt="Домбай"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Домбай</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/murmansk.jpeg"
-              alt="Мурманск"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Мурманск</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/altai.jpeg"
-              alt="Алтай"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Алтай</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
-          <li class="elements__item">
-            <img
-              src="./images/Onega.jpeg"
-              alt="Онежское озеро"
-              class="elements__photo"
-            />
-            <div class="elements__container">
-              <h2 class="elements__title">Онежское озеро</h2>
-              <button type="button" class="elements__button" aria-label="Нравится"></button>
-            </div>
-          </li>
+      <!-- elements cards-->
+      <section class="elements"> 
+        <ul class="elements__items"> 
         </ul>
       </section>
     </main>
@@ -104,15 +49,25 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
     </footer>
-    <!-- popup -->
-    <section class="popup">
+    <!-- edit-popup -->
+    <section class="popup popup_type_edit">
       <div class="popup__container">
-        <button type="button" class="popup__close-button" aria-label="Закрыть"></button>
-        <h2 class="popup__user-name">Редактировать профиль</h2>
+        <button
+          type="button"
+          class="popup__close-button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__header">Редактировать профиль</h2>
         <form class="edit-form" name="form">
           <fieldset class="edit-form__textfields">
-            <input class="edit-form__input edit-form__input_text_name" name="username" />
-            <input class="edit-form__input edit-form__input_text_occupation" name="useroccupation" />
+            <input
+              class="edit-form__input edit-form__input_text_name"
+              name="username"
+            />
+            <input
+              class="edit-form__input edit-form__input_text_occupation"
+              name="useroccupation"
+            />
           </fieldset>
           <button
             type="submit"
@@ -126,6 +81,77 @@
         </form>
       </div>
     </section>
-    <script src="./scripts/script.js"></script>
+
+    <!-- add-popup -->
+
+    <section class="popup popup_type_add">
+      <div class="popup__container">
+        <button
+          type="button"
+          class="popup__close-button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__header">Новое место</h2>
+        <form class="edit-form" name="add-card">
+          <fieldset class="edit-form__textfields">
+            <input
+              class="edit-form__input edit-form__input_text_card-heading"
+              name="input-card-heading"
+              placeholder="Название"
+            />
+            <input class="edit-form__input edit-form__input_text_card-link"
+            name="input-card-link"
+            placeholder="Ссылка на картинку" />
+          </fieldset>
+          <button
+            type="submit"
+            class="popup__saved"
+            name="popup_save"
+            value="save"
+            aria-label="Создать"
+          >
+            Создать
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <!-- <image-popup> -->
+      <section class="popup popup_type_full-image">
+        <div class="popup__wrapper">
+          <button
+            type="button"
+            class="popup__close-button popup__close-button_type_full-image"
+            aria-label="Закрыть"
+          ></button>
+          <img class="popup__full-image"
+          src="#"
+          alt="">
+          <h2 class="popup__image-title"></h2>
+        </div>
+      </section>
+
+    <!-- template -->
+    <template id="elemntsTemplate">
+      <li class="elements__item">
+        <img 
+        src="#"
+        alt="#"
+        class="elements__image">
+        <button
+        type="button"
+        class="elements__delete-button"
+        aria-label="Удалить"
+        ></button>
+        <div class="elements__container">
+          <h2 class="elements__title"></h2>
+          <button
+          type="button"
+          class="elements__like-button"
+          aria-label="Нравится">
+        </button>
+        </div>
+      </li>
+    </template>
   </body>
 </html>
