fix: исправить комментарии ревьюера

--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
             <input
               class="edit-form__input edit-form__input_text_name"
               name="username"
+              placeholder="Имя"
             />
             <input
               class="edit-form__input edit-form__input_text_occupation"
               name="useroccupation"
+              placeholder="Вид деятельности"
             />
           </fieldset>
           <button
