--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <script src="./scripts/validate.js" defer></script>
-    <script src="./scripts/constants.js" defer></script>
-    <script src="./scripts/script.js" defer></script>
+    <script type="module" src="./scripts/script.js" defer></script>
   </head>
   <body class="page">
     <!-- header -->
