--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
-    <script type="module" src="./scripts/script.js" defer></script>
   </head>
   <body class="page">
     <!-- header -->
     <header class="header">
-      <img src="./images/logo.svg" alt="Логотип" class="header__logo" />
+      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo" />
     </header>
     <main class="main">
       <!-- profile -->
       <section class="profile">
         <div class="profile__wrapper">
           <img
-            src="./images/avatar.jpg"
+            src="<%=require('./images/avatar.jpg')%>"
             alt="Аватар профиля"
             class="profile__avatar"
           />
@@ -103,28 +101,28 @@
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__header">Новое место</h2>
-        <form class="edit-form" name="add-card" novalidate>
+        <form class="edit-form edit-form_type_card" name="add-card" novalidate>
           <fieldset class="edit-form__textfields">
             <input
               class="edit-form__input edit-form__input_text_card-heading"
-              name="card-heading"
+              name="name"
               placeholder="Название"
               minlength="2"
               maxlength="30"
               required
             />
             <span
-              class="edit-form__input-error edit-form__input-error_text_card-heading"
+              class="edit-form__input-error edit-form__input-error_text_name"
             ></span>
             <input
               class="edit-form__input edit-form__input_text_card-link"
-              name="card-link"
+              name="link"
               placeholder="Ссылка на картинку"
               type="url"
               required
             />
             <span
-              class="edit-form__input-error edit-form__input-error_text_card-link"
+              class="edit-form__input-error edit-form__input-error_text_link"
             ></span>
           </fieldset>
           <button
@@ -154,7 +152,7 @@
     </section>
 
     <!-- template -->
-    <template id="elemntsTemplate">
+    <template id="elementsTemplate">
       <li class="elements__item">
         <img src="#" alt="#" class="elements__image" />
         <button
