--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,27 @@
   <body class="page">
     <!-- header -->
     <header class="header">
-      <img src="<%=require('./images/logo.svg')%>" alt="Логотип" class="header__logo" />
+      <img
+        src="<%=require('./images/logo.svg')%>"
+        alt="Логотип"
+        class="header__logo"
+      />
     </header>
     <main class="main">
       <!-- profile -->
       <section class="profile">
         <div class="profile__wrapper">
-          <img
-            src="<%=require('./images/avatar.jpg')%>"
-            alt="Аватар профиля"
-            class="profile__avatar"
-          />
+          <div class="profile__avatar-container">
+            <img src="#" alt="Аватар профиля" class="profile__avatar" />
+          </div>
           <div class="profile__info">
-            <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+            <h1 class="profile__user-name"></h1>
             <button
               class="profile__edit-button"
               type="button"
               aria-label="Редактировать"
             ></button>
-            <p class="profile__user-occupation">Исследователь океана</p>
+            <p class="profile__user-occupation"></p>
           </div>
         </div>
         <button
@@ -68,14 +70,14 @@
             ></span>
             <input
               class="edit-form__input edit-form__input_text_occupation"
-              name="occupation"
+              name="about"
               placeholder="Вид деятельности"
               minlength="2"
               maxlength="200"
               required
             />
             <span
-              class="edit-form__input-error edit-form__input-error_text_occupation"
+              class="edit-form__input-error edit-form__input-error_text_about"
             ></span>
           </fieldset>
           <button
@@ -151,6 +153,68 @@
       </div>
     </section>
 
+    <!-- submit-popup -->>
+    <section class="popup popup_type_submit">
+      <div class="popup__container">
+        <button
+          type="button"
+          class="popup__close-button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__header popup__header_type_submit">Вы уверены?</h2>
+        <form class="edit-form edit-form_type_card" name="add-card" novalidate>
+          <button
+            type="submit"
+            class="popup__saved"
+            name="popup_save"
+            value="save"
+            aria-label="Создать"
+          >
+            Да
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <!-- -->
+    <section class="popup popup_type_avatar-edit">
+      <div class="popup__container">
+        <button
+          type="button"
+          class="popup__close-button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__header">Обновить аватар</h2>
+        <form
+          class="edit-form edit-form_type_avatar"
+          name="edit-avatar"
+          novalidate
+        >
+          <fieldset class="edit-form__textfields">
+            <input
+              class="edit-form__input edit-form__input_text_card-link"
+              name="link"
+              placeholder="Ссылка на картинку"
+              type="url"
+              required
+            />
+            <span
+              class="edit-form__input-error edit-form__input-error_text_link"
+            ></span>
+          </fieldset>
+          <button
+            type="submit"
+            class="popup__saved"
+            name="popup_save"
+            value="save"
+            aria-label="Сохранить"
+          >
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </section>
+
     <!-- template -->
     <template id="elementsTemplate">
       <li class="elements__item">
@@ -162,11 +226,14 @@
         ></button>
         <div class="elements__container">
           <h2 class="elements__title"></h2>
-          <button
-            type="button"
-            class="elements__like-button"
-            aria-label="Нравится"
-          ></button>
+          <div class="elements__like-container">
+            <button
+              type="button"
+              class="elements__like-button"
+              aria-label="Нравится"
+            ></button>
+            <span class="elements__likes"></span>
+          </div>
         </div>
       </li>
     </template>
