--- a/src/index.html
+++ b/src/index.html
@@ -132,9 +132,9 @@
             class="popup__saved"
             name="popup_save"
             value="save"
-            aria-label="Создать"
+            aria-label="Сохранить"
           >
-            Создать
+            Сохранить
           </button>
         </form>
       </div>
@@ -168,7 +168,7 @@
             class="popup__saved"
             name="popup_save"
             value="save"
-            aria-label="Создать"
+            aria-label="Да"
           >
             Да
           </button>
